--- a/.github/workflows/hyoo_lingua_app.yml
+++ b/.github/workflows/hyoo_lingua_app.yml
@@ -1,4 +1,4 @@
-name: $hyoo_lingua_app
+name: $hd_linguist_app
 
 on:
   workflow_dispatch:
@@ -17,10 +17,10 @@ jobs:
     - uses: hyoo-ru/mam_build@master2
       with:
         token: ${{ secrets.GH_PAT }}
-        package: 'hyoo/lingua'
+        package: 'hd/linguist'
         modules: 'app'
     
     - uses: hyoo-ru/gh-deploy@v4.4.1
       if: github.ref == 'refs/heads/master'
       with:
-        folder: 'hyoo/lingua/app/-'
+        folder: 'hd/linguist/app/-'
