--- a/app/app.locale=ru.json
+++ b/app/app.locale=ru.json
@@ -5,6 +5,8 @@
 	"$hd_linguist_app_Foreign_translate_hint": "Перевести на родной",
 	"$hd_linguist_app_Native_translate_hint": "Перевести на чужой",
 	"$hd_linguist_app_Foreign_lang_hint": "Чужой язык",
+	"$hd_linguist_app_Native_links_title": "Варианты",
 	"$hd_linguist_app_Native_text_hint": "На родном языке",
+	"$hd_linguist_app_Foreign_links_title": "Варианты",
 	"$hd_linguist_app_Foreign_text_hint": "На чужом языке"
 }
