--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "HD Linguist",
-	"name": "Hyper Linguist",
+	"name": "Giper Linguist",
 	"icons": [
 		{
 			"src": "../../../gd/linguist/logo/logo.png",
