--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "GD Linguist",
-	"name": "Giper Linguist",
+	"short_name": "Giper Lingua",
+	"name": "Giper Lingua",
 	"icons": [
 		{
 			"src": "../../../gd/lingua/logo/logo.png",
