--- a/app/app.locale=ru.json
+++ b/app/app.locale=ru.json
@@ -1,5 +1,5 @@
 {
-	"$gd_lingua_app_title": "Гипер Лингвист",
+	"$gd_lingua_app_title": "Гипер Лингва",
 	"$gd_lingua_app_Clear_hint": "Стереть тексты",
 	"$gd_lingua_app_Native_lang_hint": "Родной язык",
 	"$gd_lingua_app_Foreign_translate_hint": "Перевести на родной",
